--- a/myapp/src/routes/styles.css
+++ b/myapp/src/routes/styles.css
@@ -82,12 +82,23 @@ button {
 	font-family: inherit;
 }
 
+.game{
+	display: inline-flex;
+	align-items: center;
+	align-self: center;
+}
+
 button{
 	width: 15%;
-	height: 10%;
+	height: 15%;
+	min-height: 100px;
+	max-height: 120px;
+	min-width: 100px;
+	max-width: 120px;
+	aspect-ratio: 1/1;
 	color: #ffcc03;
 	background-image: url('../lib/images/homeButtonBG.png');
-	background-size: 125%;
+	background-size: 100%;
 	background-position: center;
 	border-radius: 50%;
 	display: block;
